--- a/TestProj/nbproject/project.properties
+++ b/TestProj/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.aopalliance-1.0.jar=D:\\MohanGandhi\\mohan\\my folder\\Jars\\aopalliance-1.0.jar
+file.reference.sqljdbc4-3.0.jar=D:\\MohanGandhi\\mohan\\my folder\\Jars\\sqljdbc4-3.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,7 +42,9 @@ javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.jpa2-persistence.classpath}
+    ${libs.jpa2-persistence.classpath}:\
+    ${file.reference.aopalliance-1.0.jar}:\
+    ${file.reference.sqljdbc4-3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -67,7 +71,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
@@ -83,6 +86,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=TestProj.war
+war.name=LoginApp.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
